[package]
name = "open-servo-services"
version.workspace = true
edition.workspace = true

# Async service logic for non-RT operations (persist, RPC, DXL).
# Pure async logic - orchestration happens in runtime crate.

[features]
default = []

defmt = [
    "dep:defmt",
    "open-servo-runtime/defmt",
    "open-servo-kernel-api/defmt",
]

[dependencies]
# Async combinators (select, pin_mut)
futures = { version = "0.3", default-features = false }

# Workspace crates
open-servo-hw = { path = "../open-servo-hw", default-features = false }
open-servo-runtime = { path = "../open-servo-runtime", default-features = false }
open-servo-kernel-api = { path = "../open-servo-kernel-api", default-features = false }
open-servo-registry = { path = "../open-servo-registry", default-features = false }
open-servo-shadow = { path = "../open-servo-shadow", default-features = false }
open-servo-units = { path = "../open-servo-units", default-features = false }
open-servo-rpc = { path = "../open-servo-rpc", default-features = false }

# RPC
postcard = { version = "1.0", default-features = false }
postcard-rpc = { version = "0.12", default-features = false, features = ["embedded-io-async-0_6-server"] }
cobs = { version = "0.3", default-features = false }

# Async IO traits
embedded-io-async = { workspace = true }

# Storage traits and flash management
embedded-storage = { workspace = true }
embedded-storage-async = { workspace = true }
sequential-storage = { workspace = true }

# Shared deps
heapless = { workspace = true }
critical-section = { workspace = true }

# Optional
defmt = { workspace = true, optional = true }
