[package]
name = "open-servo-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-stm32f301"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
open-servo-core = { path = "../open-servo-core" }
open-servo-control = { path = "../open-servo-control" }
open-servo-hw = { path = "../open-servo-hw" }
open-servo-hw-utils = { path = "../open-servo-hw-utils" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Debug/logging
defmt = { workspace = true }
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Other
heapless = { workspace = true }
pid = { workspace = true }

[features]
default = ["potentiometer", "current-sense", "debug_rtt"]
potentiometer = []
encoder = []
current-sense = []
debug_rtt = []