[package]
name = "open-servo-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-stm32f301"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
open-servo-core = { path = "../open-servo-core" }
open-servo-control = { path = "../open-servo-control" }
open-servo-hw = { path = "../open-servo-hw" }
open-servo-hw-utils = { path = "../open-servo-hw-utils" }
open-servo-math = { path = "../open-servo-math" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Debug/logging
defmt = { workspace = true }
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Other
heapless = { workspace = true }

[features]
default = ["current-sense-bus", "temp-sense-mcu", "debug-shell"]
current-sense-bus = ["open-servo-core/current-sense-bus"]
temp-sense-mcu = []       # MCU internal temperature sensing
temp-sense-motor = []     # Motor NTC thermistor on PA4 (ch 5)
voltage-sense-motor = []  # Motor terminal voltage dividers on PA2/PA3 (ch 3/4)
debug-shell = ["open-servo-core/debug-shell"]