[package]
name = "open-servo-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-stm32f301"
path = "src/main.rs"
test = false

[dependencies]
# Workspace dependencies
open-servo-core = { path = "../open-servo-core" }
open-servo-control = { path = "../open-servo-control" }
open-servo-hw = { path = "../open-servo-hw" }
open-servo-hw-utils = { path = "../open-servo-hw-utils", features = ["rtt"] }
open-servo-math = { path = "../open-servo-math" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Debug/logging
panic-rtt-target = { version = "0.2" }

# Other
heapless = { workspace = true }
ufmt = { workspace = true }

[dependencies.defmt]
workspace = true
optional = true

[features]
default = ["current-sense-bus", "temp-sense-mcu", "debug-shell", "defmt"]
current-sense-bus = ["open-servo-core/current-sense-bus"]
temp-sense-mcu = []       # MCU internal temperature sensing
temp-sense-motor = []     # Motor NTC thermistor on PA4 (ch 5)
voltage-sense-motor = []  # Motor terminal voltage dividers on PA2/PA3 (ch 3/4)
debug-shell = ["open-servo-core/debug-shell"]
defmt = ["open-servo-core/defmt", "dep:defmt", "open-servo-hw-utils/defmt", "panic-rtt-target/defmt"]
